# IR-Optimization-Pass

./: .gitattributes  .gitignore  CMakeLists.txt  DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  README.md  build.sh  package.json  run.sh  server.js
frontend/: index.html  script.js  styles.css
report/: report.md
src/: ConstFoldStrengthReduce.cpp
testcases/: algebraic_identities.ll  combined.ll  constant_folding.ll  division_strength.ll  strength_reduction.ll
testcases/expected/: algebraic_identities.ll  combined.ll  division_strength.ll
tests/: algebraic_identities.ll  combined.ll  constant_folding.ll  opt-run-output.md  strength_reduction.ll
tests/actual/: algebraic_identities.ll  combined.ll  constant_folding.ll  strength_reduction.ll
tests/expected/: algebraic_identities.ll  constant_folding.ll  strength_reduction.ll
